Added db connection layer
The db connection is already done to retreive the credentials from aws Parameter Store and the first API endpoind was created as well with their respective domain (MasterAccount)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+aws.profile.name= iamprod-app
+parameter.db.driver = com.mysql.cj.jdbc.Driver
+parameter.db.url= /cpanel-api/app-db-url
+parameter.db.name= /cpanel-api/app-db-name
+parameter.db.user= /cpanel-api/app-db-user
+parameter.db.password= /cpanel-api/app-db-password
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql= true
